# NyayaBot

./: .gitignore  .replit  PYTHON_DEPENDENCIES.md  README.md  app.py  next.config.js  package-lock.json  package.json  pyproject.toml  replit.nix  setup_database.py  tailwind.config.js
.next/: build-manifest.json  trace
.next/cache/: config.json
.next/server/: _error.js  middleware-build-manifest.js
.next/server/pages/: _app.js  _document.js  _error.js  index.js  upload.js
.next/server/vendor-chunks/: @mui.js  next.js
.next/static/chunks/: webpack.js
.next/static/development/: _buildManifest.js
.next/static/webpack/: webpack.1e23cf311fe9faee.hot-update.js  webpack.1f22e0b5c9233eca.hot-update.js  webpack.23abf81f5808e91d.hot-update.js  webpack.450ce51d0e51b196.hot-update.js  (+10 more)
.streamlit/: config.toml
attached_assets/: Pasted--App-Name-Working-Title-NyayaBot-Your-Free-AI-Lawyer-Vision-To-provide-instant-free-vo-1744818393387.txt  Pasted-Certainly-Below-is-a-template-for-a-formal-Affidavit-that-can-be-used-to-report-a-lost-mobile-phone-1744876251434.txt
components/chat/: ChatInterface.js
components/document/: DocumentGenerator.js  DocumentUploader.js
components/layout/: Header.js  Layout.js
pages/: _app.js  _document.js  index.js  upload.js
pages/api/: chat.js  generate-document.js  llm-utils.js  text-to-speech.js  transcribe.js  upload-document.js
styles/: globals.css
utils/: __init__.py  audio_utils.py  db_utils.py  document_generator.py  language_utils.py  llm_utils.py  process_document.py  rag_utils.py  retrieve_context.py
(+17 files in other folders)
