[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-translate>=2.0.0",
    "langchain>=0.2.16",
    "langdetect>=1.0.9",
    "openai>=1.0.0",
    "psycopg2-binary>=2.9.10",
    "pydub>=0.25.1",
    "pypdf2>=3.0.1",
    "reportlab>=4.3.1",
    "soundfile>=0.13.1",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.44.1",
    "tts>=0.22.0",
    "whisper>=1.1.10",
]
